# python-project-50

./: .gitignore  .gitignore.txt  Makefile  README.md  gendiff-json.cast  gendiff-yaml.cast  pyproject.toml  recursion.cast
.github/workflows/: pyci.yml
compare_files/scripts/: __init__.py  gendiff.py
gendiff/: __init__.py  argparse.py  cli.py  create_tree.py  diff.py  generate_diff.py  parse_files.py
gendiff/formatters/: __init__.py  format.py  format_diff.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/view/: json_view.py
test/: test_generate_diff.py
tests/: test_generate_diff.py
