[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Утилита, показывающая различия между двумя файлами"
authors = ["Andrey <andrei_chesanov@mail.ru>"]
readme = "README.md"
packages = [
  { include = "gendiff"}
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hexlet_python_package"]
