[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Utility that shows the differences between two files"
authors = ["Andrey <andrei_chesanov@mail.ru>"]
readme = "README.md"
packages = [
  { include = "gendiff"}
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
pyyaml = "^6.0.2"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
coverage = "^7.6.10"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["gendiff"]